--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,9 @@ body {
   margin: 0 auto;
   background-color: white;
 }
+
+.header {
+  margin-bottom: 0.8rem;
+  display: flex;
+  justify-content: flex-end;
+}
