some progress on loading

--- a/src/global.css
+++ b/src/global.css
@@ -75,7 +75,7 @@ body {
   padding: 1.6rem;
   width: 80%;
   height: 90vh;
-  margin: 0 auto;
+  margin: 2rem auto;
   background-color: white;
 }
 
