--- a/src/list-item/styles.module.css
+++ b/src/list-item/styles.module.css
@@ -1,4 +1,10 @@
 .root {
-  background-color: pink;
+  background-color: white;
+  padding: 0.6rem 0.4rem;
   margin-bottom: 10px;
+  border: 1px solid gainsboro;
+  border-radius: 4px;
+
+  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
 }
