--- a/src/components/list-item/styles.module.css
+++ b/src/components/list-item/styles.module.css
@@ -2,7 +2,7 @@
   background-color: white;
   padding: 0.6rem 0.4rem;
   margin-bottom: 10px;
-  border: 1px solid gainsboro;
+  border: 1px solid var(--border-color);
   border-radius: 4px;
 }
 
